--- a/styles/main.css
+++ b/styles/main.css
@@ -1,12 +1,15 @@
 .Main{
-	display: flex;
+
 	position: relative;
-	max-width: 100%;
+  max-width: 100%;
+  justify-content:space-between;
+  	display: flex;
+  justify-content: center;
 }
 
 .Main__Image-Container{
-	width: 100%;
-	height: 700px;
+  max-width: 1200px;
+  height: 700px;
 }
 
 .Main__Image-Island{
@@ -25,13 +28,13 @@
 }
 
 .Main__Title-Text:first-child{
-	font-size: 60px;
+	font-size: 50px;
 	font-weight: 600;
 	margin-top: 200px;
 }
 
 .Main__Title-Text:last-child{
-	font-size: 40px;
+	font-size: 30px;
 	font-weight: 600;
 }
 
