--- a/styles/header.css
+++ b/styles/header.css
@@ -4,6 +4,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  position: fixed; 
+  z-index: 99;
+  background-color: #ffffff ;
 }
 
 .Header__Menu{
@@ -15,14 +18,11 @@
 .Header__Menu-Menu{
 	display: flex;
   box-sizing: border-box;
-}
-
-.Header__Menu-Center{
-  width: 50px;
+  padding-right: 400px;
 }
 
 .Header__Menu-MenuButton{
-	width: 100px;
+	width: 80px;
   height: 17px;
 	display: block;
   text-align: center;
@@ -31,22 +31,17 @@
 	padding: 20px 5px;
 }
 
-Header__Menu-Logo{
-  font-size: 25px;
-  font-color: blue;
-}
-
 .Header__Menu-Share{
-	width: 200px;
+  width: 120px;
+  height: 55px;
 	align-items: center;
 	display: flex;
-	justify-content:space-between;   
+	justify-content: space-between;   
 	background-color: white;
 }
 
 .Header__Menu-Icon{
 	display: block;
-	width: 60px;
 	text-align: center;
 }
 
